feat: add user authentication and profile management endpoints

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,14 @@ coverage.xml
 *.cover
 .hypothesis/
 .pytest_cache/
+users/views.py
+users/views.py
+users/views.py
+users/urls.py
+users/serializers.py
+nexus/urls.py
+nexus/settings.py
+movies/filters.py
+.gitignore
+movies/urls.py
+movies/serializers.py
