--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ python-decouple==3.8
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
 django-filter==23.5
+drf-yasg==1.21.7
+celery==5.3.4
+redis==5.0.1
+django-redis==5.4.0
