--- a/requirements.txt
+++ b/requirements.txt
@@ -38,3 +38,6 @@ uritemplate==4.2.0
 urllib3==2.5.0
 vine==5.1.0
 wcwidth==0.2.13
+whitenoise==6.6.0
+dj-database-url==2.1.0
+django-celery-beat==2.5.0
