--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,32 @@
-amqp==5.3.1
-asgiref==3.9.1
-async-timeout==5.0.1
-billiard==4.2.1
-celery==5.5.3
-certifi==2025.8.3
-charset-normalizer==3.4.2
-click==8.2.1
-click-didyoumean==0.3.1
-click-plugins==1.1.1.2
-click-repl==0.3.0
-cron-descriptor==1.4.5
+# Core Django packages
 Django==5.1
+djangorestframework==3.14.0
 django-cors-headers==4.3.1
 django-filter==23.5
-django-redis==6.0.0
-djangorestframework==3.14.0
-drf-yasg==1.21.10
-gunicorn==23.0.0
-idna==3.10
-inflection==0.5.1
-kombu==5.5.4
-packaging==25.0
-prompt_toolkit==3.0.51
+
+# Database packages
 psycopg2-binary==2.9.9
-python-crontab==3.3.0
-python-dateutil==2.9.0.post0
-python-decouple==3.8
-pytz==2025.2
-PyYAML==6.0.2
-redis==6.4.0
-requests==2.31.0
-six==1.17.0
-sqlparse==0.5.3
-typing_extensions==4.14.1
-tzdata==2025.2
-uritemplate==4.2.0
-urllib3==2.5.0
-vine==5.1.0
-wcwidth==0.2.13
-whitenoise==6.6.0
 dj-database-url==2.1.0
-django-celery-beat==2.5.0
+
+# Redis and caching
+redis>=5.0.1
+django-redis>=5.4.0
+
+# Celery packages
+celery>=5.3.4
+django-celery-beat==2.8.1
+
+# HTTP requests
+requests>=2.31.0
+
+# Environment management
+python-decouple>=3.8
+
+# API documentation
+drf-yasg>=1.21.7
+
+# Static files
+whitenoise>=6.6.0
+
+# WSGI server
+gunicorn>=21.2.0
