--- a/railway.toml
+++ b/railway.toml
@@ -2,11 +2,10 @@
 builder = "NIXPACKS"
 
 [deploy]
-healthcheckPath = "/api/"
-healthcheckTimeout = 300
+healthcheckPath = "/admin/"
+healthcheckTimeout = 600
 restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
+restartPolicyMaxRetries = 3
 
 [env]
 PYTHONUNBUFFERED = "1"
-PORT = "8000"
