--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ['python310', 'postgresql']
+nixPkgs = ['python310']
 
 [phases.install]
 cmds = ['pip install -r requirements.txt']
@@ -8,4 +8,4 @@ cmds = ['pip install -r requirements.txt']
 cmds = ['python manage.py collectstatic --noinput']
 
 [start]
-cmd = 'python manage.py migrate && gunicorn nexus.wsgi:application --bind 0.0.0.0:$PORT'
+cmd = 'bash release.sh && gunicorn nexus.wsgi:application --bind 0.0.0.0:$PORT'
